--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ input[type="text"] {
   gap: 20px;
   margin-bottom: 40px;
   flex-wrap: wrap; /* agar responsif */
-  margin-left: px;
+  margin-left: 19px;
 }
 
 /* Kartu */
